# bk25

./: .coverage  .gitignore  CREDITS.md  DEPLOYMENT.md  Dockerfile  LICENSE.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE3_STATUS.md  README.md  SHIPPED_STATUS.md  TODO.md  coverage.xml  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_tests.py  setup_dev.py
config/: README.md  bk25_config.json  bk25_config.json.example
data/: bk25.db
docs/: API_REFERENCE.md  CONFIGURATION.md  IMPLEMENTATION_GUIDE.md  PHASE3_STATUS.md  PHASE4_STATUS.md  PHASE5_STATUS.md  PHASE6_STATUS.md  PORTING_PLAN.md  PROJECT_AUDIT.md  PYTHON_ARCHITECTURE.md  PYTHON_MIGRATION_PLAN.md  PYTHON_PORT_PLAN.md  QUICK_START.md  README.md  USER_MANUAL.md  migration-plan.md
old/: .gitignore  ANALYSIS.md  package-lock.json
old/docker/: README.md
old/personas/: ben-brown.json  default.json  friendly-helper.json  goat.json  peter-swimm.json  vanilla.json
old/src/core/: bk25.js  memory.js
old/src/core/channels/: README.md
old/src/generators/: applescript.js  powershell.js
old/tests/: README.md
old/web/: index.html  manifest.json
personas/: business-analyst.json  technical-expert.json
src/: __init__.py  config.py  index.js  logging_config.py  main.py
src/bk25/: __init__.py  channel_manager.py  core.py  main.py  memory.py  persona_manager.py  server.py
src/bk25.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bk25/api/: routes.py
src/bk25/core/: bk25_core.py  channel_manager.py  memory.py  persona_manager.py
src/bk25/generators/: __init__.py  applescript.py  base.py  bash.py  powershell.py
src/bk25/models/: channel.py  chat.py  persona.py
src/core/: __init__.py  bk25.py  channel-manager.js  channel_manager.py  code_generator.py  execution_monitor.py  llm_integration.py  memory.py  persona-manager.js  persona_manager.py  prompt_engineering.py  script_executor.py
src/core/channels/: __init__.py  apple_business_chat.py  base.py  discord.py  slack.py  teams.py  twitch.py  web.py  whatsapp.py
src/generators/: __init__.py  applescript.py  bash.js  bash.py  powershell.py
test_results/: junit.xml  test_results.json  test_summary.txt
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_basic.py  test_bk25_integration.py  test_channel_manager.py  test_execution_monitor.py  test_fastapi_app.py  test_memory.py  test_persona_manager.py  test_phase2.py  test_script_executor.py
tests/api/: test_fastapi_endpoints.py
tests/e2e/: test_complete_workflow.py  test_end_to_end.py  test_full_workflow.py
tests/integration/: test_api.py  test_config_integration.py  test_persona_channel_integration.py
tests/unit/: test_bk25_core.py  test_channel_manager.py  test_config.py  test_generators.py  test_persona_channel_memory.py  test_persona_manager.py
tests/unit/core/: test_channel_manager.py  test_memory.py  test_persona_manager.py
tests/unit/generators/: test_applescript.py  test_bash.py  test_powershell.py
tmp/: test_channel_modules.py  test_channels.py  test_code_extraction.py  test_code_generation.py  test_complete_system.py  test_generators.py  test_personas.py
web/: index.html
