[tool.poetry]
name = "project-python-port"
version = "0.1.0"
description = "Python port of original Node.js repository"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
black = "^24.3"
ruff = "^0.4"
pytest-mock = "^3.12"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"